ADoc Sources: Shared Attributes Files
In `extras_src/` add new `_shared-attributes.adoc` file with commonly
shared attribute definitions for links, project paths, library assets,
etc.

* Update StdLib Manual source to include new attributes file.
* Update Rakefile: add new attr. file to dependencies of
  StdLib Manual and tutorials documents.
* `extras_src/README.md`: add link and description to new file.

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -28,6 +28,7 @@
 :docinfodir: ../../_assets/rouge
 :imagesdir: ../../_assets/images
 // CUSTOM ATTRIBUTES DEFINITIONS:
+include::../_shared-attributes.adoc[]
 include::StdLibMan-inc_attributes.adoc[]
 
 // ***************************************************************************
